[package]
name = "medium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]

# https://rust-cli.github.io/book/tutorial/testing.html
# for testing
assert_cmd = "2.0.12"
predicates = "3.0.3"
